clusters/workbench/apps/flux-addons/webhook-receivers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-reciever
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    external-dns.kubernetes.io/target: ${personal_services_ip}
    nginx.ingress.kubernetes.io/limit-rpm: "60"
  labels:
    # This is necessary due to the flux Network Policy blocking any pods
    # that aren't notification-controller
    use-cloudflare-dns-solver: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &host "flux-workbench-receiver.${personal_domain}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: /hook
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
